--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@theme {
+	--default-font-family: "Roboto";
+}
+
+@media (min-width: 640px) {
+	@theme {
+		--text-base: 1.3rem;
+	}
+}
